--- a/gradle.properties
+++ b/gradle.properties
@@ -19,8 +19,6 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-
-WEATHER_APIKEY=cJDOoTadVDSCNvIFKzZ42-DleX16DSDw
 MAPS_API_KEY=
 
-WEATHER_APIKEY=738b95b7612d4deabb0112858211911
+WEATHER_APIKEY=
