reverted back the changes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,18 +5,10 @@ plugins {
 }
 
 android {
-    signingConfigs {
-        debug {
-            storeFile file('C:\\Users\\HP\\Desktop\\keyStore.jks')
-            storePassword 'com4510iscool'
-            keyAlias 'com4510'
-            keyPassword 'com4510iscool'
-        }
-    }
     compileSdk 31
 
     defaultConfig {
-        applicationId "uk.ac.shef.oak.com.com4510"
+        applicationId "com.exmple.omy"
         minSdk 30
         targetSdk 31
         versionCode 1
