--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OMY">
+        android:theme="@style/Theme.OMY"
+        android:usesCleartextTraffic="true">
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="${MAPS_API_KEY}" />
+        <meta-data android:name="preloaded_fonts" android:resource="@array/preloaded_fonts" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
