--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,25 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    signingConfigs {
+        debug {
+            storeFile file('keyStore.jks')
+            storePassword 'com4510iscool'
+            keyAlias 'com4510'
+            keyPassword 'com4510iscool'
+        }
+    }
+
+    compileSdkVersion 30
+    buildToolsVersion '30.0.3'
 
     defaultConfig {
+        configurations.all {
+            resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
+        }
         applicationId "com.example.OMY"
-        minSdk 30
-        targetSdk 31
+        minSdk 27
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -34,7 +47,6 @@ android {
     buildFeatures {
         viewBinding true
     }
-    compileSdkVersion 31
 }
 
 dependencies {
@@ -46,6 +58,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
