--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,9 @@ android {
     compileSdk 31
 
     defaultConfig {
+        configurations.all {
+            resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
+        }
         applicationId "com.example.OMY"
         minSdk 30
         targetSdk 31
