--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation ("androidx.slidingpanelayout:slidingpanelayout:1.2.0-beta01")
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
