--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,21 +18,8 @@
         android:usesCleartextTraffic="true" >
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="${MAPS_API_KEY}" />
         <meta-data android:name="preloaded_fonts" android:resource="@array/preloaded_fonts" />
-        <!--
-        <activity
-            android:name=".photos.PhotoShowActivity"
-            android:banner="@drawable/app_icon_your_company"
-            android:exported="true"
-            android:icon="@drawable/app_icon_your_company"
-            android:label="@string/title_activity_photo_show"
-            android:logo="@drawable/app_icon_your_company"
-            android:screenOrientation="landscape" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-            </intent-filter>
-        </activity>-->
+
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -50,6 +37,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+        android:name=".photos.PhotoShowActivity"
+        android:exported="true">
         </activity>
     </application>
 
