--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
     id 'kotlin-kapt'
+    id "com.google.devtools.ksp" version "1.5.31-1.0.0"
 }
 
 android {
@@ -54,5 +55,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
 }
