--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 WEATHER_APIKEY=738b95b7612d4deabb0112858211911
+MAPS_API_KEY=AIzaSyAQ4ZDGyQlHdzmY28GwFEG_JxtPFQ59sAU
