--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OMY"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        >
+
         <activity
             android:name=".trips.TripShowActivity"
-            android:exported="true" />
+            android:exported="true"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
