--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <meta-data android:name="preloaded_fonts" android:resource="@array/preloaded_fonts" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize" >
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
@@ -38,8 +39,10 @@
             android:exported="true" />
         <activity
             android:name=".photos.PhotoShowActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
+        <activity
+            android:name=".locations.LocationShowActivity"
+            android:exported="true" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
