Added the location edit review activity and its layout Change the floating action button to darkgreen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:theme="@style/Theme.OMY"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".locations.LocationEditReviewAcitivity"
+            android:exported="true" />
+        <activity
             android:name=".locations.LocationSeeReviewActivity"
             android:exported="true" />
 
