--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 .gradle
 /local.properties
 .idea
+/.idea/misc.xml
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
-.idea
 .DS_Store
 /build
 /captures
