--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
@@ -24,6 +24,9 @@
             android:exported="true" />
         <activity
             android:name=".reviews.LocationReviewsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".photos.LocationPhotosActivity"
             android:exported="true" />
         <activity
             android:name=".locations.LocationShowActivity"
